--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         }
     ],
     "require": {
-        "illuminate/support": "^5|^6|^7|^8|^9.0",
+        "illuminate/support": "^5|^6|^7|^8|^9|^10",
         "league/omnipay": "~3.0"
     },
     "autoload": {
